name:                haskell-rbpcp-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/runeksvendsen/haskell-rbpcp-api#readme
license:             BSD3
license-file:        LICENSE
author:              Rune K. Svendsen
maintainer:          runesvend@gmail.com
copyright:           2016 Rune K. Svendsen
category:            Finance Network Bitcoin
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/runeksvendsen/haskell-rbpcp-api
